Glibc Syllable Changelog

* September 27 2008 *

	o clock_gettime.c, clock_getres.c: New files. Support CLOCK_MONOTONIC & CLOCK_REALTIME
	o getmntent.c, setmntent.c: New files.

* July 12 2008, Anthony Morphett *

	o get_system_info_v.c: New file, provides proper handling of get_system_info syscall versions.
	o get_system_info.c: Assumes SYS_INFO_VERSION == 3 for compatibility with old binaries.
	o sys/sysinfo.h: Added get_system_info_v(); added macro get_system_info() wrapping
	  get_system_info_v() with the current SYS_INFO_VERSION.

* April 5th 2008 *

	o get_system_info.c: Call get_system_info directly.
	o xget_system_info.c: Removed.

* March 16th 2008 *

	o socketpair.c: New file. Taken from an older libiberty implementation.

* January 27th 2008 *

	o aio_cancel.c, aio_read64.c, aio_read.c, aio_write64.c, aio_write.c: New files. Emulate
	  basic async IO using pread() & pwrite()

* January 24th 2008 *

	o Makeconfig: Over-ride built-program-cmd
	o configure: Un-merged the *-*-syllable* handling patches to..
	o syllable/configure: Here. New file.
	o shlib-versions: Un-merged the *-*-syllable* definitions to..
	o syllable/shlib-versions: Here. New file.
	o timezone/zic.c: Use symlink() instead of link()
	o timezone/Makefile: Removed the old patches. We now process and install the zoneinfo data.

* January 15th 2008 *

	o Makeconfig: Over-ride the run-program-prefix variable so we don't try to invoke generated
	  programs with our non-existent ld.so

* December 26th 2007 *

	o tld.c: TLD destructors are now handled in a POSIX compliant manner.

* December 23rd 2007 *

	o tld.c: Fix/implement TLD destructors. The destructor list is maintained correctly on a
	  per-thread basis. If a destructor is registered for a given TLD it will now be called
	  during free_tld() and passed the last value of the TLD.
	o tld.c: Implemented __free_all_tlds(). All TLDs allocated to the calling thread will
	  be freed and and TLD destructors will be called.