@@ -145,5 +145,5 @@ writev_pos		EXTRA	writev_pos		5	__writev_pos		writev_pos
 event			EXTRA	event			i:iiipi	__event		event
 
 #mmap			-		mmap			b:aniiii 	__mmap			mmap
-#mprotect		-		mprotect		i:aii		__mprotect		mprotect
-#munmap			-		munmap			i:ai		__munmap		munmap
+mprotect		-		mprotect		i:aii		__mprotect		mprotect
+munmap			-		munmap			i:ai		__munmap		munmap
